@@ -108,7 +108,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   >
                     <label
                       class="components-base-control__label"
-                      for="woocommerce-select-control-7__control-input"
+                      for="woocommerce-select-control-10__control-input"
                     >
                       Search by order number, customer name, or billing email
                     </label>
@@ -118,7 +118,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                       aria-haspopup="true"
                       autocomplete="off"
                       class="woocommerce-select-control__control-input"
-                      id="woocommerce-select-control-7__control-input"
+                      id="woocommerce-select-control-10__control-input"
                       placeholder=""
                       role="combobox"
                       type="text"
@@ -126,7 +126,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                     />
                     <span
                       class="screen-reader-text"
-                      id="search-inline-input-7"
+                      id="search-inline-input-10"
                     >
                       Move backward for selected items
                     </span>
@@ -211,14 +211,14 @@ exports[`Transactions list renders correctly when can filter by several currenci
       >
         <div
           aria-hidden="false"
-          aria-labelledby="caption-7"
+          aria-labelledby="caption-10"
           class="woocommerce-table__table"
           role="group"
         >
           <table>
             <caption
               class="woocommerce-table__caption screen-reader-text"
-              id="caption-7"
+              id="caption-10"
             >
               Transactions
             </caption>
@@ -240,7 +240,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-7-1"
+                    aria-describedby="header-10-1"
                     class="components-button"
                     type="button"
                   >
@@ -270,7 +270,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-7-1"
+                    id="header-10-1"
                   >
                     Sort by Date and time in ascending order
                   </span>
@@ -298,7 +298,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-7-3"
+                    aria-describedby="header-10-3"
                     class="components-button"
                     type="button"
                   >
@@ -328,7 +328,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-7-3"
+                    id="header-10-3"
                   >
                     Sort by Amount in descending order
                   </span>
@@ -340,7 +340,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-7-4"
+                    aria-describedby="header-10-4"
                     class="components-button"
                     type="button"
                   >
@@ -370,7 +370,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-7-4"
+                    id="header-10-4"
                   >
                     Sort by Fees in descending order
                   </span>
@@ -382,7 +382,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-7-5"
+                    aria-describedby="header-10-5"
                     class="components-button"
                     type="button"
                   >
@@ -412,7 +412,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-7-5"
+                    id="header-10-5"
                   >
                     Sort by Net in descending order
                   </span>
@@ -886,7 +886,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   >
                     <label
                       class="components-base-control__label"
-                      for="woocommerce-select-control-8__control-input"
+                      for="woocommerce-select-control-11__control-input"
                     >
                       Search by order number, customer name, or billing email
                     </label>
@@ -896,7 +896,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                       aria-haspopup="true"
                       autocomplete="off"
                       class="woocommerce-select-control__control-input"
-                      id="woocommerce-select-control-8__control-input"
+                      id="woocommerce-select-control-11__control-input"
                       placeholder=""
                       role="combobox"
                       type="text"
@@ -904,7 +904,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                     />
                     <span
                       class="screen-reader-text"
-                      id="search-inline-input-8"
+                      id="search-inline-input-11"
                     >
                       Move backward for selected items
                     </span>
@@ -989,14 +989,14 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
       >
         <div
           aria-hidden="false"
-          aria-labelledby="caption-8"
+          aria-labelledby="caption-11"
           class="woocommerce-table__table"
           role="group"
         >
           <table>
             <caption
               class="woocommerce-table__caption screen-reader-text"
-              id="caption-8"
+              id="caption-11"
             >
               Transactions
             </caption>
@@ -1018,7 +1018,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-8-1"
+                    aria-describedby="header-11-1"
                     class="components-button"
                     type="button"
                   >
@@ -1048,7 +1048,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-8-1"
+                    id="header-11-1"
                   >
                     Sort by Date and time in ascending order
                   </span>
@@ -1076,7 +1076,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-8-3"
+                    aria-describedby="header-11-3"
                     class="components-button"
                     type="button"
                   >
@@ -1106,7 +1106,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-8-3"
+                    id="header-11-3"
                   >
                     Sort by Amount in descending order
                   </span>
@@ -1118,7 +1118,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-8-4"
+                    aria-describedby="header-11-4"
                     class="components-button"
                     type="button"
                   >
@@ -1148,7 +1148,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-8-4"
+                    id="header-11-4"
                   >
                     Sort by Fees in descending order
                   </span>
@@ -1160,7 +1160,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-8-5"
+                    aria-describedby="header-11-5"
                     class="components-button"
                     type="button"
                   >
@@ -1190,7 +1190,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-8-5"
+                    id="header-11-5"
                   >
                     Sort by Net in descending order
                   </span>
@@ -2285,7 +2285,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   >
                     <label
                       class="components-base-control__label"
-                      for="woocommerce-select-control-6__control-input"
+                      for="woocommerce-select-control-9__control-input"
                     >
                       Search by order number, subscription number, customer name, or billing email
                     </label>
@@ -2295,7 +2295,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                       aria-haspopup="true"
                       autocomplete="off"
                       class="woocommerce-select-control__control-input"
-                      id="woocommerce-select-control-6__control-input"
+                      id="woocommerce-select-control-9__control-input"
                       placeholder=""
                       role="combobox"
                       type="text"
@@ -2303,7 +2303,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                     />
                     <span
                       class="screen-reader-text"
-                      id="search-inline-input-6"
+                      id="search-inline-input-9"
                     >
                       Move backward for selected items
                     </span>
@@ -2388,14 +2388,14 @@ exports[`Transactions list subscription column renders correctly 1`] = `
       >
         <div
           aria-hidden="false"
-          aria-labelledby="caption-6"
+          aria-labelledby="caption-9"
           class="woocommerce-table__table"
           role="group"
         >
           <table>
             <caption
               class="woocommerce-table__caption screen-reader-text"
-              id="caption-6"
+              id="caption-9"
             >
               Transactions
             </caption>
@@ -2417,7 +2417,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-6-1"
+                    aria-describedby="header-9-1"
                     class="components-button"
                     type="button"
                   >
@@ -2447,7 +2447,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-6-1"
+                    id="header-9-1"
                   >
                     Sort by Date and time in ascending order
                   </span>
@@ -2475,7 +2475,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-6-3"
+                    aria-describedby="header-9-3"
                     class="components-button"
                     type="button"
                   >
@@ -2505,7 +2505,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-6-3"
+                    id="header-9-3"
                   >
                     Sort by Amount in descending order
                   </span>
@@ -2517,7 +2517,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-6-4"
+                    aria-describedby="header-9-4"
                     class="components-button"
                     type="button"
                   >
@@ -2547,7 +2547,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-6-4"
+                    id="header-9-4"
                   >
                     Sort by Fees in descending order
                   </span>
@@ -2559,7 +2559,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   scope="col"
                 >
                   <button
-                    aria-describedby="header-6-5"
+                    aria-describedby="header-9-5"
                     class="components-button"
                     type="button"
                   >
@@ -2589,7 +2589,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                   </button>
                   <span
                     class="screen-reader-text"
-                    id="header-6-5"
+                    id="header-9-5"
                   >
                     Sort by Net in descending order
                   </span>
